2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/Document.cs: fixed 'Bug 432856 - Creation and
	  editing broken for unsaved files'.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/Document.cs: Document doesn't hook up to the
	  parser document update anymore.

2008-10-02  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui.Content/IViewHistory.cs,
	  MonoDevelop.Ide.Gui/TextNavigationPoint.cs,
	  MonoDevelop.Ide.Gui/NavigationHistory.cs,
	  MonoDevelop.Ide.Gui/DefaultNavigationPoint.cs,
	  MonoDevelop.Ide.Gui/NavigationService.cs,
	  MonoDevelop.Ide.Gui/INavigationPoint.cs: Removed old history
	  system.
	* MonoDevelop.Ide.Commands/NavigationCommands.cs,
	  MonoDevelop.Ide.addin.xml, MonoDevelop.Ide.mdp, Makefile.am,
	  MonoDevelop.Ide.Gui/TextFileNavigationPoint.cs,
	  MonoDevelop.Ide.Gui/FileNavigationPoint.cs,
	  MonoDevelop.Ide.Gui/Workbench.cs,
	  MonoDevelop.Ide.Gui/NavigationHistoryService.cs,
	  MonoDevelop.Ide.Gui.Content/INavigable.cs: New navigation history
	  system. Fixes "Bug 412296 - [PATCH] Make history navigation more
	  reliable and intuitive".
	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: Escape text correctly.

2008-10-02  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui/Ide.cs, MonoDevelop.Ide.Gui/IdeStartup.cs,
	  MonoDevelop.Ide/Services.cs: Track removal of service APIs.

2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs,
	  MonoDevelop.Ide.Templates/ResourceFileDescriptionTemplate.cs,
	  MonoDevelop.Ide.Templates/ProjectDescriptor.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolderNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/SystemFileNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Dialogs/IncludeFilesDialog.cs,
	  templates/EmptyTextFile.xft.xml, templates/EmptyXMLFile.xft.xml,
	  MonoDevelop.Ide.Gui/RootWorkspace.cs,
	  MonoDevelop.Ide.Gui/ProjectOperations.cs: Track API.